--- a/settings_template.json
+++ b/settings_template.json
@@ -1,5 +1,6 @@
 {
     "chrome_path": "C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe",
     "username": "<your username>",
-    "password": "<your password>"
+    "password": "<your password>",
+    "course": 3
 }
